--- a/spec/paths/directory@notifyHistorys.yaml
+++ b/spec/paths/directory@notifyHistorys.yaml
@@ -25,3 +25,19 @@ post:
         application/json:
           schema:
             $ref: "#/components/schemas/NotifyHistory"
+get:
+  tags:
+    - Directory
+  security:
+  - ApiKeyAuth: []
+  - ApiRootKeyAuth: []
+  summary: 列出通知历史
+  responses:
+    '200':
+      description: 所有通知历史
+      content:
+        application/json:
+          schema:
+            type: array
+            items:
+              $ref: '#/components/schemas/NotifyHistory'
