emailservice send add orgId params

--- a/spec/paths/directory@emailServices@send.yaml
+++ b/spec/paths/directory@emailServices@send.yaml
@@ -1,3 +1,10 @@
+parameters:
+  - name: orgId
+    in: query
+    description: 组织ID
+    required: true
+    schema:
+      type: integer
 post:
   security:
     - ApiKeyAuth: []
