modify send interface name

--- a/spec/components/schemas/EmailService.yaml
+++ b/spec/components/schemas/EmailService.yaml
@@ -7,7 +7,7 @@ properties:
     type: string
   address:
     type: string
-  display_name:
+  displayName:
     type: string
   theme:
     type: string
