--- a/spec/paths/directory@user@{userId}.yaml
+++ b/spec/paths/directory@user@{userId}.yaml
@@ -41,3 +41,17 @@ put:
         application/json:
           schema:
             $ref: '#/components/schemas/User'
+get:
+  security:
+    - ApiRootKeyAuth: []
+  tags:
+    - Directory
+  summary: 获取user
+  responses:
+    '200':
+      description: 获取成功
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/User'
+
