--- a/spec/paths/directory@team.yaml
+++ b/spec/paths/directory@team.yaml
@@ -23,6 +23,11 @@ post:
               type: string
             desc:
               type: string
+            leads:
+              type: array
+              items:
+                type: integer
+
   responses:
     '200':
       description: 创建成功
