--- a/spec/paths/directory@teams@{teamId}.yaml
+++ b/spec/paths/directory@teams@{teamId}.yaml
@@ -37,6 +37,10 @@ put:
               type: string
             desc:
               type: string
+            leads:
+              type: array
+              items:
+                type: integer
   responses:
     '200':
       description: 更新成功
