modify team update interface

--- a/spec/paths/directory@team.yaml
+++ b/spec/paths/directory@team.yaml
@@ -23,7 +23,7 @@ post:
               type: string
             desc:
               type: string
-            leads:
+            leaders:
               type: array
               items:
                 type: integer
