--- a/spec/paths/directory@teams@{teamId}.yaml
+++ b/spec/paths/directory@teams@{teamId}.yaml
@@ -37,7 +37,7 @@ put:
               type: string
             desc:
               type: string
-            leads:
+            leaders:
               type: array
               items:
                 type: integer
