--- a/spec/paths/dc@delivery@envManage.yaml
+++ b/spec/paths/dc@delivery@envManage.yaml
@@ -25,7 +25,7 @@ parameters:
       type: integer
 post:
   tags:
-    - dc
+    - DeliveryCenter
   summary: 创建交付环境变量信息
   requestBody:
     description: 交付环境变量信息参数
@@ -38,7 +38,7 @@ post:
       description: "创建成功"
 get:
   tags:
-    - dc
+    - DeliveryCenter
   summary: 获取交付环境变量信息
   responses:
     '200':
@@ -49,7 +49,7 @@ get:
             $ref: '#/components/schemas/DeliveryEnv'
 delete:
   tags:
-    - dc
+    - DeliveryCenter
   summary: 删除交付环境变量信息
   responses:
     '200':
