--- a/spec/paths/dc@delivery@securityManage.yaml
+++ b/spec/paths/dc@delivery@securityManage.yaml
@@ -25,7 +25,7 @@ parameters:
       type: integer
 post:
   tags:
-    - dc
+    - DeliveryCenter
   summary: 创建交付安全扫描结果信息
   requestBody:
     description: 交付安全扫描结果参数
@@ -38,7 +38,7 @@ post:
       description: "创建成功"
 get:
   tags:
-    - dc
+    - DeliveryCenter
   summary: 获取交付安全扫描结果信息
   responses:
     '200':
@@ -49,7 +49,7 @@ get:
             $ref: '#/components/schemas/DeliverySecurity'
 delete:
   tags:
-    - dc
+    - DeliveryCenter
   summary: 删除交付安全扫描结果信息
   responses:
     '200':
