--- a/spec/paths/dc@envManage@search.yaml
+++ b/spec/paths/dc@envManage@search.yaml
@@ -14,13 +14,13 @@ parameters:
   - name: piplineName
     in: query
     description: 工作流的名称
-    required: true
+    required: false
     schema:
       type: string
   - name: taskId
     in: query
     description: 工作流任务ID
-    required: true
+    required: false
     schema:
       type: integer
 get:
@@ -29,11 +29,13 @@ get:
     - ApiRootKeyAuth: []
   tags:
     - DeliveryCenter
-  summary: 得到交付配置文件信息
+  summary: 获取交付环境变量信息列表
   responses:
     '200':
-      description: 交付配置文件信息参数
+      description: 交付环境变量信息参数
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/DeliveryConfig'
+            type: array
+            items:
+              $ref: '#/components/schemas/DeliveryEnv'
