--- a/spec/paths/dc@imageManage@search.yaml
+++ b/spec/paths/dc@imageManage@search.yaml
@@ -14,26 +14,40 @@ parameters:
   - name: piplineName
     in: query
     description: 工作流的名称
-    required: true
+    required: false
     schema:
       type: string
   - name: taskId
     in: query
     description: 工作流任务ID
-    required: true
+    required: false
     schema:
       type: integer
+  - name: imageName
+    in: query
+    description: 镜像名称
+    required: false
+    schema:
+      type: string
+  - name: imageLabel
+    in: query
+    description: 镜像标签
+    required: false
+    schema:
+      type: string
 get:
   security:
     - ApiKeyAuth: []
     - ApiRootKeyAuth: []
   tags:
     - DeliveryCenter
-  summary: 得到交付配置文件信息
+  summary: 获取交付镜像文件信息列表
   responses:
     '200':
-      description: 交付配置文件信息参数
+      description: 交付镜像文件信息参数
       content:
         application/json:
           schema:
-            $ref: '#/components/schemas/DeliveryConfig'
+            type: array
+            items:
+              $ref: '#/components/schemas/DeliveryImage'
