--- a/spec/components/schemas/DeliveryBuild.yaml
+++ b/spec/components/schemas/DeliveryBuild.yaml
@@ -6,9 +6,7 @@ properties:
   testReportUrls:
     type: array
     items:
-      type: array
-      items:
-        type: string
+      type: string
   orderedServices:
     type: array
     items:
@@ -18,12 +16,10 @@ properties:
   issues:
     type: array
     items:
-      type: array
-      items:
-        type: string
+      type: string
   commits:
     type: array
     items:
-      type: array
-      items:
-        type: string
+      type: object
+  jobContext:
+    type: string
