--- a/spec/components/schemas/DeliveryConfig.yaml
+++ b/spec/components/schemas/DeliveryConfig.yaml
@@ -4,8 +4,12 @@ properties:
     type: string
     readOnly: true
   fileContentList:
-    type: array
-    items:
+    type: object
+    additionalProperties:
       type: array
       items:
-        type: string
+        type: array
+        items:
+          type: string
+  createdAt:
+    type: integer
