--- a/spec/components/schemas/DeliveryImage.yaml
+++ b/spec/components/schemas/DeliveryImage.yaml
@@ -4,12 +4,22 @@ properties:
     type: string
     readOnly: true
   image:
-    type: string
-  imageSize:
-    type: integer
-  imageDigest:
-    type: string
-  imageLables:
-    type: array
-    items:
+    type: object
+    additionalProperties:
       type: string
+  imageSize:
+    type: object
+    additionalProperties:
+      type: integer
+  imageDigest:
+    type: object
+    additionalProperties:
+      type: string
+  imageLables:
+    type: object
+    additionalProperties:
+      type: array
+      items:
+        type: string
+  createdAt:
+    type: integer
