--- a/spec/components/schemas/DeliveryConfig.yaml
+++ b/spec/components/schemas/DeliveryConfig.yaml
@@ -5,7 +5,7 @@ properties:
     readOnly: true
   serviceName:
     type: string
-  ConfigContents:
+  configContents:
     type: array
     items:
       $ref: '#/components/schemas/DeliveryConfigObject'
