--- a/spec/paths/dc@securitys.yaml
+++ b/spec/paths/dc@securitys.yaml
@@ -27,3 +27,19 @@ get:
             type: array
             items:
               $ref: '#/components/schemas/DeliverySecurity'
+post:
+  security:
+    - ApiKeyAuth: []
+    - ApiRootKeyAuth: []
+  tags:
+    - DeliveryCenter
+  summary: 新增镜像安全扫描详情信息
+  requestBody:
+    description: 镜像安全扫描参数信息参数
+    content:
+      application/json:
+        schema:
+          $ref: '#/components/schemas/DeliverySecurity'
+  responses:
+    '200':
+      description: 信息添加成功
