--- a/spec/paths/directory@userPermissionRelation.yaml
+++ b/spec/paths/directory@userPermissionRelation.yaml
@@ -11,7 +11,7 @@ get:
     description: 权限UUID
     required: true
     schema:
-      type: integer
+      type: string
   - name: permissionType
     in: query
     description: 权限类型 1.系统权限,2.项目权限
@@ -29,7 +29,7 @@ get:
     - ApiRootKeyAuth: []
   tags:
     - Directory
-  summary: 获取用户权限信息
+  summary: 获取用户权限关系
   responses:
     '200':
       description: 用户是否有某个权限
