--- a/spec/paths/directory@roleEnv.yaml
+++ b/spec/paths/directory@roleEnv.yaml
@@ -16,6 +16,12 @@ post:
       description: "创建成功"
 get:
   parameters:
+  - name: productName
+    in: query
+    description: 产品名称
+    required: true
+    schema:
+      type: string
   - name: roleId
     in: query
     description: 角色ID
@@ -45,6 +51,12 @@ get:
               $ref: '#/components/schemas/RoleEnv'
 delete:
   parameters:
+  - name: productName
+    in: query
+    description: 产品名称
+    required: true
+    schema:
+      type: string
   - name: roleId
     in: query
     description: 角色ID
