mofidy permission interface

--- a/spec/paths/directory@roleProduct.yaml
+++ b/spec/paths/directory@roleProduct.yaml
@@ -22,7 +22,7 @@ get:
     required: false
     schema:
       type: integer
-  - name: productObjectID
+  - name: productId
     in: query
     description: 项目ID
     required: false
@@ -51,7 +51,7 @@ delete:
     required: false
     schema:
       type: integer
-  - name: productObjectID
+  - name: productId
     in: query
     description: 项目ID
     required: false
