--- a/spec/paths/directory@roleUser.yaml
+++ b/spec/paths/directory@roleUser.yaml
@@ -14,6 +14,27 @@ post:
   responses:
     "200":
       description: "创建成功"
+put:
+  security:
+    - ApiKeyAuth: []
+    - ApiRootKeyAuth: []
+  tags:
+    - Directory
+  summary: 修改系统角色用户信息
+  requestBody:
+    description: 系统角色用户信息参数
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            userId:
+              type: integer
+            isAdmin:
+              type: boolean
+  responses:
+    "200":
+      description: "创建成功"
 get:
   parameters:
   - name: roleType
