--- a/spec/paths/directory@sso.yaml
+++ b/spec/paths/directory@sso.yaml
@@ -5,6 +5,27 @@ parameters:
     required: true
     schema:
       type: integer
+get:
+  security:
+    - ApiKeyAuth: []
+    - ApiRootKeyAuth: []
+  tags:
+    - Directory
+  summary: 获取sso信息
+  responses:
+    '200':
+      description: 获取sso信息
+      content:
+        application/json:
+          schema:
+            type: object
+            properties: 
+              clientId: 
+                type: "string"
+              secret: 
+                type: "string"
+              redirect: 
+                type: "string"
 post:
   security:
     - ApiKeyAuth: []
