--- a/spec/paths/directory@rolePermission.yaml
+++ b/spec/paths/directory@rolePermission.yaml
@@ -34,6 +34,12 @@ get:
     required: false
     schema:
       type: string
+  - name: productName
+    in: query
+    description: 如果角色类型为项目角色，则项目名称必须包含
+    required: false
+    schema:
+      type: string
   security:
     - ApiKeyAuth: []
     - ApiRootKeyAuth: []
@@ -66,6 +72,12 @@ delete:
   - name: permissionUUID
     in: query
     description: 权限UUID
+    required: false
+    schema:
+      type: string
+  - name: productName
+    in: query
+    description: 如果角色类型为项目角色，则项目名称必须包含
     required: false
     schema:
       type: string
