--- a/spec/paths/directory@roleUser.yaml
+++ b/spec/paths/directory@roleUser.yaml
@@ -55,6 +55,12 @@ get:
     required: false
     schema:
       type: integer
+  - name: productName
+    in: query
+    description: 如果角色类型为项目角色，则项目名称必须包含
+    required: false
+    schema:
+      type: string
   security:
     - ApiKeyAuth: []
     - ApiRootKeyAuth: []
@@ -90,6 +96,12 @@ delete:
     required: false
     schema:
       type: integer
+  - name: productName
+    in: query
+    description: 如果角色类型为项目角色，则项目名称必须包含
+    required: false
+    schema:
+      type: string
   tags:
     - Directory
   summary: 删除角色用户信息
